design rotation api
